...

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="258dp"
                android:layout_height="34dp"
...

            <TextView
                android:id="@+id/profile_recipes"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toEndOf="@+id/public_profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_kudos" />


...

            <ImageView
                android:id="@+id/profile_kudos_icon"
                android:layout_width="65sp"
                android:layout_height="65sp"
...

                    <TextView
                        android:id="@+id/public_profile_about_me_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoEggs"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoMilk"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoNuts"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoShellfish"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoSoy"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoWheat"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoPesc"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoVegan"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...

                                <ImageView
                                    android:id="@+id/recipeInfoVeggie"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:text="Chef Rank"
                android:textColor="#000000"
                app:layout_constraintEnd_toEndOf="parent"
...
